RESOLVED FIXED197859
[iOS] Cannot tab or shift + tab out of address bar on google.com
https://bugs.webkit.org/show_bug.cgi?id=197859
Summary [iOS] Cannot tab or shift + tab out of address bar on google.com
Daniel Bates
Reported 2019-05-13 16:10:34 PDT
Seen on iOS. Steps To Reproduce: 1. Visit http://google.com and search for “tesla” 2. Press tab or shift + tab until the address bar is focused. 3. Once the address bar is focused, press tab or shift + tab. Focus should move to web page and URL suggestion menu should close. But URL suggestion menu remains open though the page acts like it is responding to the tab.
Attachments
Patch (2.41 KB, patch)
2019-05-13 16:19 PDT, Daniel Bates
no flags
Archive of layout-test-results from ews215 for win-future (13.33 MB, application/zip)
2019-05-14 04:07 PDT, EWS Watchlist
no flags
Daniel Bates
Comment 1 2019-05-13 16:10:57 PDT
Daniel Bates
Comment 2 2019-05-13 16:19:17 PDT
EWS Watchlist
Comment 3 2019-05-14 04:07:23 PDT
Comment on attachment 369799 [details] Patch Attachment 369799 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/12186483 New failing tests: security/contentSecurityPolicy/video-with-file-url-allowed-by-media-src-star-with-AllowContentSecurityPolicySourceStarToMatchAnyProtocol-enabled.html http/tests/security/local-video-src-from-remote.html
EWS Watchlist
Comment 4 2019-05-14 04:07:27 PDT
Created attachment 369834 [details] Archive of layout-test-results from ews215 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews215 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
WebKit Commit Bot
Comment 5 2019-05-14 09:22:38 PDT
Comment on attachment 369799 [details] Patch Clearing flags on attachment: 369799 Committed r245283: <https://trac.webkit.org/changeset/245283>
WebKit Commit Bot
Comment 6 2019-05-14 09:22:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.