[iOS] Cannot tab or shift + tab out of address bar on google.com https://bugs.webkit.org/show_bug.cgi?id=197859 <rdar://problem/46651565>

Patch by Daniel Bates <dabates@apple.com> on 2019-05-14
Reviewed by Darin Adler.

Non-editable elements can participate in tab cycling via the HTML tabindex attribute.
We should allow setting the initial focus to such an element when transitioning from
the chrome (e.g. address bar) to the web page.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _becomeFirstResponderWithSelectionMovingForward:completionHandler:]):

Canonical link: https://commits.webkit.org/212005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245283 268f45cc-cd09-0410-ab3c-d52691b4dbfc